Bug 283178 - Do not show "Closed tabs" page after crash when directly opening an URL
Summary: Do not show "Closed tabs" page after crash when directly opening an URL
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 14:08 UTC by Kai Uwe Broulik
Modified: 2012-04-24 08:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2011-10-02 14:08:28 UTC
Version:           latest git snapshot (using KDE 4.7.1) 
OS:                Linux

See below.

Reproducible: Always

Steps to Reproduce:
1. Browse with rekonq
2. Kill rekonq (or make it crash)
3. Directly open an URL (i.e. enter "rekonq www.kde.org")

Actual Results:  
Rekonq opens and you get the "Recently closed tabs" page and the secondary tab in the background (whiches title is "(Untitled)" while it is loading) which is the actual page.
It is always the Recently closed tabs page even if you have a start page configured.

Expected Results:  
Just open the page the user is asking for, the "It seems rekonq crashed. Would you like to restore the previous session?" question bar is enough.
Comment 1 Andrea Diamantini 2012-04-24 08:31:44 UTC
Git commit 1054e2ea8b5ad17ca719a1fee10832709f1c2418 by Andrea Diamantini.
Committed on 24/04/2012 at 10:37.
Pushed by adjam into branch 'master'.

Do not show "closed tabs" page after crash when directly opening an URL

M  +26   -23   src/application.cpp
M  +2    -1    src/sessionmanager.cpp

http://commits.kde.org/rekonq/1054e2ea8b5ad17ca719a1fee10832709f1c2418