Do not show "closed tabs" page after crash when directly opening an URL

BUG: 283178