src/sessionmanager.cpp
@@ -208,7 +208,8 @@ void SessionManager::restoreCrashedSession()
 
         MainView *mv = (winNo == 0) ? rApp->mainWindow()->mainView() : rApp->newMainWindow()->mainView();
 
-        int currentTab = loadViewTabs(mv, window, true);
+        bool useCurrentTab = (mv->currentWebTab()->url().protocol() == QL1S("about"));
+        int currentTab = loadViewTabs(mv, window, useCurrentTab);
 
         mv->setCurrentIndex(currentTab);
     }
